projects/compiler/test/typechecker/map/error_type_mismatch_bindingdecl.2.out
Error at %FILE_NAME%:1:29
Type mismatch
  |  val m: Map<Int, String> = { a: 123 }
                                 ^
Expected: Int
but instead found: String
